--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             </div>
             <div class="content-container">
                 <div id="project-side-bar">
+                    <h2>Projects</h2>
                 </div>
                 <div id="project-container">
                 
